--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ app.jwtExpirationInMs = 604800000
 
 # Comma separated list of allowed origins
 app.cors.allowedOrigins = http://localhost:3000
+
+# OpenAI properties
+openai.model=gpt-3.5-turbo
+openai.api.key=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
+openai.api.url=https://api.openai.com/v1/chat/completions
