--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ app.cors.allowedOrigins = http://localhost:5173
 # OpenAI properties
 openai.model=gpt-3.5-turbo
 openai.api.url=https://api.openai.com/v1/chat/completions
+
+spring.devtools.livereload.enabled=true  
